deploy_sem_servicemesh/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis
  name: redis
spec:
  selector:
    name: redis
  type: NodePort
  ports:
  - port: 6379
    nodePort: 32511
